2009-01-16  Daniel Elstner  <danielk@openismus.com>

	* modules/input/gtkimcontextmultipress.[ch]: Remove the namespace
	prefix from functions defined locally only.  Clean up the code and
	change indentation to match the GTK+ coding style.
	(_GtkImContextMultipress::key_sequences): Replace array of pointers
	by GHashTable.  Adapt the implementation accordingly.
	(passthrough_enabled_for_window): Remove.  The passthrough hack is
	no longer necessary thanks to the recently introduced "im-module"
	property of GtkEntry and GtkTextView.
	(load_config): Rework to implement an improved configuration file
	format.  Just fetch all keys of the group instead of expecting the
	keys to be named a certain way.  This also allows interpreting the
	config key itself as the GDK key name to bind the character sequence
	to, thereby making it independent of the sequence itself.

	* modules/input/im-multipress.conf: New example configuration using
	the new syntax.  The example sequences are now bound to the numeric
	keypad and imitate the behavior of a standard mobile phone.

2009-01-15  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkimcontext.c: documentation description: Mention the various 
	properties and the environment variable, with links to their 
 	documentation.
	* gtk/gtksettings.c:
	* gtk/gtktextview.c: Make the im-module property documentation more 
	expansive.

2009-01-15  Diego Escalante Urrelo  <diegoe@gnome.org>

	Bug 562701 – GtkEntryCompletion popup sizes its rows wrong
	when they span for more than one line.

	Don't assume actions and results have equal height, this causes
	negative size requisitions when results are more than one
	line tall.

	* gtk/gtkentrycompletion.c: change the formula used to calculate
	the size of the completion popup.

2009-01-14  Federico Mena Quintero  <federico@novell.com>

	Remember the file chooser's geometry across invocations.

	* gtk/gtkfilechoosersettings.h (struct _GtkFileChooserSettings):